graphics update, small fixes, autobet fix

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <div class="currency" data-cur="ton">
           <input id="betValue" type="number" placeholder="Размер ставки">
         </div>
+        <label for="autoBet">Автоставка:</label>
         <div class="autoBet">
           <input id="autoBet" type="number" placeholder="Автоставка">
         </div>
