--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .carousel{ display:flex; align-items:center; gap:8px; }
     .carousel span{ min-width:32px; text-align:center; font-weight:600; }
     .field {display:flex;}
-    .iframe-box{ margin-top:24px; height:600px; width:600px;border:1px solid #aaa; }
+    .iframe-box{ margin-top:24px; height:640px; width: 480px;;border:1px solid #aaa; }
     .gameFrame{ width:100%; height:100%; border:none; }
     .currency[data-cur="ton"]::after{ content: ' TON';}
     .risk-btn{
